# za_description

./: CMakeLists.txt  README.md  package.xml
launch/: za_arm_description.launch  za_arm_description.launch.py
meshes/: .gitattributes  adapter_za_robotiq.stl  link_1.dae  link_1_collision.stl  link_2.dae  link_2_collision.stl  link_3.dae  link_3_collision.stl  link_4.dae  link_4_collision.stl  link_5.dae  link_5_collision.stl  link_6.dae  link_6_collision.stl  robotiq_hand_e_base.stl  robotiq_hand_e_gripper1.stl  robotiq_hand_e_gripper2.stl  robotiq_hand_e_top.stl
meshes/collision/: base_link_collision.stl  link_1_collision.stl  link_2_collision.stl  link_3_collision.stl  link_4_collision.stl  link_5_collision.stl  link_6_collision.stl
meshes/visual/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
rviz/: za_model_viewer.rviz
urdf/: robotiq_hand_e.rviz  robotiq_hand_e.xacro  robotiq_hand_e_macro.xacro  utils.xacro  za.ros2_control.xacro  za.urdf  za.xacro  za_hand_e.xacro  za_hand_e_macro.xacro  za_macro.xacro  za_on_stand.xacro  za_on_stand_macro.xacro  za_on_stand_robotiq.xacro  za_stand.rviz  za_stand_macro.xacro
