<?xml version="1.0"?>
<package format="2">
  <name>za_description</name>
  <version>0.1.0</version>
  <description>Tormach ZA robot URDF files and meshes</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>liburdfdom-tools</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <build_export_depend>xacro</build_export_depend>

</package>
