<?xml version="1.0"?>
<package format="2">
  <name>za_description</name>
  <version>0.1.1</version>
  <description>Tormach ZA robot URDF files and meshes</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>liburdfdom-tools</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
